--- a/radio-operator-toolbox-angular/src/index.html
+++ b/radio-operator-toolbox-angular/src/index.html
@@ -9,7 +9,7 @@
   <!-- <meta name="theme-color" content="#1976d2"> -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-  <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css"> -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
   <link rel="manifest" href="manifest.webmanifest">
 </head>
 
@@ -18,7 +18,7 @@
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-  <!-- <script src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script> -->
+  <script src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 
