--- a/radio-operator-toolbox-angular/src/index.html
+++ b/radio-operator-toolbox-angular/src/index.html
@@ -3,22 +3,36 @@
 
 <head>
   <meta charset="utf-8">
-  <title>RadioOperatorToolbox</title>
+  <title>Radio Operator Toolbox</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <meta name="theme-color" content="#1976d2"> -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4r/css/all.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4r/css/all.css"> -->
   <link rel="manifest" href="manifest.webmanifest">
+
+
+  <link href="/assets/fontawesome/css/fontawesome.css" rel="stylesheet">
+  <link href="/assets/fontawesome/css/brands.css" rel="stylesheet">
+  <link href="/assets/fontawesome/css/solid.css" rel="stylesheet">
+
+  <!-- update existing v5 CSS to use v6 icons and assets -->
+  <link href="/assets/fontawesome/css/v5-font-face.css" rel="stylesheet">
+
+  <!-- support v4 icon references/syntax -->
+  <link href="/assets/fontawesome/css/v4-font-face.css" rel="stylesheet" />
 </head>
 
 <body>
   <app-root></app-root>
 
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-  <script src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+    crossorigin="anonymous"></script>
+  <!-- <script src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script> -->
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 
